Correção de bugs na chamada do favincon, e do controller das telas consultas e login

--- a/HelpDesk/public/views/login.html
+++ b/HelpDesk/public/views/login.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="img/favicon1.png" /> <!-- favicon -->
+  <link rel="icon" href="../img/favicon1.png" /> <!-- favicon -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> <!-- jquery script -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> <!-- bootstrap script CSS -->
@@ -22,7 +22,7 @@
 <body ng-controller="loginController as vm" class="animsition" data-animsition-in-class="zoom-in-sm" data-animsition-in-duration="1000" data-animsition-out-class="zoom-out-sm" data-animsition-out-duration="800">
   <div class="container">
       <div class="login-box col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-        <img class="img-responsive img-logohelpdesk-login" src="img/favicon1.png" alt="logo"><h2>HelpDesk</h2>
+        <img class="img-responsive img-logohelpdesk-login" src="../img/favicon1.png" alt="logo"><h2>HelpDesk</h2>
         <form class="form" name="formularioLogin" id="formularioLogin" novalidate ng-submit="vm.submitForm()">
           <div class="row">
             <div class="form-group col-sm-12">
