--- a/HelpDesk/public/views/consulta.html
+++ b/HelpDesk/public/views/consulta.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="img/favicon1.png" /> <!-- favicon -->
+  <link rel="icon" href="../img/favicon1.png" /> <!-- favicon -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> <!-- jquery script -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> <!-- bootstrap script CSS -->
@@ -13,13 +13,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/js/animsition.min.js"></script> <!-- Transição entre telas -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/css/animsition.min.css"> <!-- Transição entre telas -->
   <script src="/js/app.js"></script>
-  <script src="/js/controllers/form-controller.js"></script>
+  <script src="/js/controllers/cadastro-controller.js"></script>
   <link rel="stylesheet" href="/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700" rel="stylesheet" type="text/css"> <!-- Fonte importada do Google -->
   <title>HelpDesk | Consulta</title>
 </head>
 
-<body ng-controller="formController as vm">
+<body ng-controller="cadastroController as vm">
     <nav class="navbar navbar-inverse"> <!-- Inicio da Navbar -->
         <div class="container-fluid">
             <div class="navbar-header">
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#" id="logohelpdesk"><img class="img-responsive img-logohelpdesk-menu" src="img/favicon1.png" alt="logo">&nbsp;&nbsp;HelpDesk</a>
+                <a class="navbar-brand" href="#" id="logohelpdesk"><img class="img-responsive img-logohelpdesk-menu" src="../img/favicon1.png" alt="logo">&nbsp;&nbsp;HelpDesk</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
