--- a/HelpDesk/public/views/login.html
+++ b/HelpDesk/public/views/login.html
@@ -13,7 +13,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/js/animsition.min.js"></script> <!-- Transição entre telas -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/css/animsition.min.css"> <!-- Transição entre telas -->
   <script src="/js/app.js"></script>
-  <script src="/js/script.js"></script>
+  <script src="/js/animsition.js"></script>
   <script src="/js/controllers/login-controller.js"></script>
   <link rel="stylesheet" href="/css/style.css">
   <title>HelpDesk</title>
