Definindo a página de login como principal de abertura do projeto

--- a/HelpDesk/public/views/cadastro/cadastro.html
+++ b/HelpDesk/public/views/cadastro/cadastro.html
@@ -15,6 +15,7 @@
             <option>Adriano</option>
             <option>Iana</option>
             <option>Julia</option>
+            <option>Paula</option>
             <option>Pedro</option>
             <option>Vinicius</option>
             <option>Ygor</option>
