--- a/HelpDesk/public/views/consulta/consulta.html
+++ b/HelpDesk/public/views/consulta/consulta.html
@@ -51,6 +51,7 @@
                             <li><a href="#">Adriano</a></li>
                             <li><a href="#">Iana</a></li>
                             <li><a href="#">Julia</a></li>
+                            <li><a href="#">Paula</a></li>
                             <li><a href="#">Pedro</a></li>
                             <li><a href="#">Vinicius</a></li>
                             <li><a href="#">Ygor</a></li>
