--- a/HelpDesk/public/views/login.html
+++ b/HelpDesk/public/views/login.html
@@ -38,7 +38,7 @@
               <br>
               <button class="btn btn-success btn-lg btn-block" type="submit" ng-disabled="!formularioLogin.$valid"><span class="glyphicon glyphicon-log-in icon-login-btn" aria-hidden="true"></span>&nbsp;Entrar</button>
               <br>
-              <a href="#/cadastro" class="animsition-link" data-animsition-out-class="fade-out-down-sm" data-animsition-out-duration="2000">Esqueceu a senha?</a> / <a href="#">Trocar senha</a>
+              <a href="#/cadastro" class="animsition-link" data-animsition-out-class="fade-out-down-sm" data-animsition-out-duration="2000">Esqueceu a senha?</a> / <a href="#">Trocar senha</a> / <a href="#/cadastro">Continuar (Teste)</a>
             </div>
           </div>
         </form>
