--- a/HelpDesk/public/views/login.html
+++ b/HelpDesk/public/views/login.html
@@ -1,25 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-br" ng-app="helpdesk">
-
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" href="../img/favicon1.png" /> <!-- favicon -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> <!-- jquery script -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> <!-- bootstrap script CSS -->
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> <!-- bootstrap script JS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script> <!-- angular script -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.8/angular-messages.min.js"></script> <!-- Script do Angular Messages -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/js/animsition.min.js"></script> <!-- Transição entre telas -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/css/animsition.min.css"> <!-- Transição entre telas -->
-  <script src="/js/app.js"></script>
-  <script src="/js/animsition.js"></script>
-  <script src="/js/controllers/login-controller.js"></script>
-  <link rel="stylesheet" href="/css/style.css">
-  <title>HelpDesk</title>
-</head>
-
-<body ng-controller="loginController as vm" class="animsition" data-animsition-in-class="zoom-in-sm" data-animsition-in-duration="1000" data-animsition-out-class="zoom-out-sm" data-animsition-out-duration="800">
+<body class="animsition" data-animsition-in-class="zoom-in-sm" data-animsition-in-duration="1000" data-animsition-out-class="zoom-out-sm" data-animsition-out-duration="800">
   <div class="container">
       <div class="login-box col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <img class="img-responsive img-logohelpdesk-login" src="../img/favicon1.png" alt="logo"><h2>HelpDesk</h2>
@@ -45,5 +24,3 @@
       </div>
   </div>
 </body>
-
-</html>
