--- a/HelpDesk/public/views/login.html
+++ b/HelpDesk/public/views/login.html
@@ -1,26 +1,24 @@
-<body class="animsition" data-animsition-in-class="zoom-in-sm" data-animsition-in-duration="1000" data-animsition-out-class="zoom-out-sm" data-animsition-out-duration="800">
-  <div class="container">
-      <div class="login-box col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-        <img class="img-responsive img-logohelpdesk-login" src="../img/favicon1.png" alt="logo"><h2>HelpDesk</h2>
-        <form class="form" name="formularioLogin" id="formularioLogin" novalidate ng-submit="vm.submitForm()">
-          <div class="row">
-            <div class="form-group col-sm-12">
-              <br>
-              <div class="input-group input-login-margin">
-                <span class="input-group-addon input-lg glyphicon glyphicon-envelope icon-login-input"></span>
-                <input class="form-control input-lg" name="email" id="email" type="email" placeholder="E-MAIL" ng-model="vm.login.email" ng-class="formularioLogin.email.$invalid && formularioLogin.email.$touched ? 'alteraFocoErro' : ''" ng-required="true"/>
-              </div>
-              <div class="input-group">
-                <span class="input-group-addon input-lg glyphicon glyphicon-lock icon-login-input"></span>
-                <input class="form-control input-lg" name="senha" id="senha" type="password" placeholder="SENHA" ng-model="vm.login.senha" ng-class="formularioLogin.senha.$invalid && formularioLogin.senha.$touched ? 'alteraFocoErro' : ''" ng-required="true"/>
-              </div>
-              <br>
-              <button class="btn btn-success btn-lg btn-block" type="submit" ng-disabled="!formularioLogin.$valid"><span class="glyphicon glyphicon-log-in icon-login-btn" aria-hidden="true"></span>&nbsp;Entrar</button>
-              <br>
-              <a href="#/cadastro" class="animsition-link" data-animsition-out-class="fade-out-down-sm" data-animsition-out-duration="2000">Esqueceu a senha?</a> / <a href="#">Trocar senha</a> / <a href="#/cadastro">Continuar (Teste)</a>
+<div class="container">
+    <div class="login-box col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+      <img class="img-responsive img-logohelpdesk-login" src="../img/favicon1.png" alt="logo"><h2>HelpDesk</h2>
+      <form class="form" name="formularioLogin" id="formularioLogin" novalidate ng-submit="vm.submitForm()">
+        <div class="row">
+          <div class="form-group col-sm-12">
+            <br>
+            <div class="input-group input-login-margin">
+              <span class="input-group-addon input-lg glyphicon glyphicon-envelope icon-login-input"></span>
+              <input class="form-control input-lg" name="email" id="email" type="email" placeholder="E-MAIL" ng-model="vm.login.email" ng-class="formularioLogin.email.$invalid && formularioLogin.email.$touched ? 'alteraFocoErro' : ''" ng-required="true"/>
             </div>
+            <div class="input-group">
+              <span class="input-group-addon input-lg glyphicon glyphicon-lock icon-login-input"></span>
+              <input class="form-control input-lg" name="senha" id="senha" type="password" placeholder="SENHA" ng-model="vm.login.senha" ng-class="formularioLogin.senha.$invalid && formularioLogin.senha.$touched ? 'alteraFocoErro' : ''" ng-required="true"/>
+            </div>
+            <br>
+            <button class="btn btn-success btn-lg btn-block" type="submit" ng-disabled="!formularioLogin.$valid"><span class="glyphicon glyphicon-log-in icon-login-btn" aria-hidden="true"></span>&nbsp;Entrar</button>
+            <br>
+            <a href="#/cadastro" class="animsition-link">Esqueci minha senha</a> / <a href="#">Trocar senha</a>
           </div>
-        </form>
-      </div>
-  </div>
-</body>
+        </div>
+      </form>
+    </div>
+</div>
