Exibindo cadastros dinamicamente na tela de consulta com data formatada

--- a/HelpDesk/public/views/consulta/consulta.html
+++ b/HelpDesk/public/views/consulta/consulta.html
@@ -227,7 +227,7 @@
                 <td>{{cadastro.problema}}</td>
                 <td>{{cadastro.idFreshdesk}}</td>
                 <td>{{cadastro.idAluno}}</td>
-                <td>{{cadastro.data}}</td>
+                <td>{{cadastro.data | date:'dd/MM/yyyy'}}</td>
                 <td>{{cadastro.diagnostico}}</td>
                 <td>{{cadastro.resposta}}</td>
                 <td>{{cadastro.observacoes}}</td>
