--- a/HelpDesk/public/views/consulta/consulta.html
+++ b/HelpDesk/public/views/consulta/consulta.html
@@ -39,6 +39,12 @@
     </div>
 
 </div>
+<form class="form-inline">
+    <div class="form-group">
+        <label>Procurar</label>
+        <input type="text" ng-model="procurar" class="form-control" placeholder="Procurar...">
+    </div>
+</form>
 <div class="table-responsive">
     <table class="table table-bordered">
         <thead>
@@ -46,7 +52,7 @@
                 <th>#</th>
                 <th>
                     <div class="dropdown">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">Colaborador
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown" >Colaborador
                             <span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li><a href="#">Adriano</a></li>
@@ -216,7 +222,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="cadastro in cadastros">
+            <tr ng-repeat="cadastro in cadastros | filter:procurar" >
                 <td>#</td>
                 <td>{{cadastro.colaborador}}</td>
                 <td>{{cadastro.entrada}}</td>
