--- a/HelpDesk/public/views/login.html
+++ b/HelpDesk/public/views/login.html
@@ -1,13 +1,13 @@
 <div class="container">
     <div class="login-box col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
       <img class="img-responsive img-logohelpdesk-login" src="../img/favicon1.png" alt="logo"><h2>HelpDesk</h2>
-      <form class="form" name="formularioLogin" id="formularioLogin" novalidate ng-submit="vm.submitForm()">
+      <form class="form" name="formularioLogin" id="formularioLogin" novalidate ng-submit="vm.autenticar()">
         <div class="row">
           <div class="form-group col-sm-12">
             <br>
             <div class="input-group input-login-margin">
               <span class="input-group-addon input-lg glyphicon glyphicon-envelope icon-login-input"></span>
-              <input class="form-control input-lg" name="email" id="email" type="email" placeholder="E-MAIL" ng-model="vm.login.email" ng-class="formularioLogin.email.$invalid && formularioLogin.email.$touched ? 'alteraFocoErro' : ''" ng-required="true"/>
+              <input class="form-control input-lg" name="email" id="email" type="text" placeholder="E-MAIL" ng-model="vm.login.email" ng-class="formularioLogin.email.$invalid && formularioLogin.email.$touched ? 'alteraFocoErro' : ''" ng-required="true"/>
             </div>
             <div class="input-group">
               <span class="input-group-addon input-lg glyphicon glyphicon-lock icon-login-input"></span>
