--- a/HelpDesk/public/views/consulta/consulta.html
+++ b/HelpDesk/public/views/consulta/consulta.html
@@ -6,15 +6,15 @@
             <small class="text-muted">HelpDesk</small>
         </h2>
         <br>
-        <form novalidate name="formConsulta" class="form-horizontal" role="form" ng-submit="vm.consultar(formConsulta.idAluno.$modelValue)">
+        <form novalidate class="form-horizontal">
             <div class="form-group">
                 <p class="col-sm-2 control-label"><span class="glyphicon glyphicon-search"></span> Pesquisar</p>
                 <div class="col-sm-4"></div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label" for="idAluno">ID Aluno:</label>
+                <label class="col-sm-2 control-label" for="procurar">Procurar:</label>
                 <div class="col-sm-4">
-                    <input type="number" id="idAluno" name="idAluno" ng-model="vm.cadastro.idAluno" class="form-control" ng-minlength="4" ng-maxlength="7" ng-required="true">
+                    <input type="text" id="procurar" name="procurar" ng-model="procurar" class="form-control" ng-minlength="4" ng-maxlength="7" ng-required="true" placeholder="Procurar...">
                 </div>
             </div>
             <div class="form-group">
@@ -29,22 +29,10 @@
                     <input name="data" id="dataAte" ng-model="vm.cadastro.dataAte" class="form-control" type="date">
                 </div>
             </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label" for="btnSubmit-consulta"></label>
-                <div class="col-sm-4">
-                    <button type="submit" id="btnSubmit-consulta" class="btn btn-success" ng-disabled="!formConsulta.$valid">OK</button>
-                </div>
-            </div>
         </form>
     </div>
 
 </div>
-<form class="form-inline">
-    <div class="form-group">
-        <label>Procurar</label>
-        <input type="text" ng-model="procurar" class="form-control" placeholder="Procurar...">
-    </div>
-</form>
 <div class="table-responsive">
     <table class="table table-bordered">
         <thead>
