Ajustes de padrão na controller da página de CONSULTA

--- a/HelpDesk/public/views/consulta/consulta.html
+++ b/HelpDesk/public/views/consulta/consulta.html
@@ -34,14 +34,16 @@
 
 </div>
 <div class="table-responsive">
-    <table class="table table-bordered">
+    <table class="table table-bordered table-striped table-hover table-condensed">
         <thead>
             <tr>
                 <th>#</th>
                 <th>
                     <div class="dropdown">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown" >Colaborador
-                            <span class="caret"></span></button>
+                        Colaborador&nbsp;
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
                         <ul class="dropdown-menu">
                             <li><a href="#">Adriano</a></li>
                             <li><a href="#">Iana</a></li>
@@ -55,8 +57,10 @@
                 </th>
                 <th>
                     <div class="dropdown">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">Entrada
-                            <span class="caret"></span></button>
+                        Entrada&nbsp;
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
                         <ul class="dropdown-menu">
                             <li><a href="#">Demanda</a></li>
                             <li><a href="#">E-mail</a></li>
@@ -68,8 +72,10 @@
                 </th>
                 <th>
                     <div class="dropdown">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">Origem
-                            <span class="caret"></span></button>
+                        Origem&nbsp;
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
                         <ul class="dropdown-menu">
                             <li><a href="#">Aluno</a></li>
                             <li><a href="#">MEDGRUPO</a></li>
@@ -78,8 +84,10 @@
                 </th>
                 <th>
                     <div class="dropdown">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">Aplicação
-                            <span class="caret"></span></button>
+                        Aplicação&nbsp;
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
                         <ul class="dropdown-menu">
                             <li><a href="#">Área Restrita</a></li>
                             <li><a href="#">MedSoft</a></li>
@@ -93,8 +101,10 @@
                 </th>
                 <th>
                     <div class="dropdown">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">Device
-                            <span class="caret"></span></button>
+                        Device&nbsp;
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
                         <ul class="dropdown-menu">
                             <li><a href="#">iPhone</a></li>
                             <li><a href="#">iPad</a></li>
@@ -109,8 +119,10 @@
                 </th>
                 <th>
                     <div class="dropdown">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">Status
-                            <span class="caret"></span></button>
+                        Status&nbsp;
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
                         <ul class="dropdown-menu">
                             <li><a href="#">Solucionado</a></li>
                             <li><a href="#">Pendente</a></li>
@@ -121,8 +133,10 @@
                 </th>
                 <th>
                     <div class="dropdown">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">Problemas
-                            <span class="caret"></span></button>
+                        Problemas&nbsp;
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
                         <ul class="dropdown-menu">
                             <li><a href="#">XXXXXXXXXXX</a></li>
                             <li><a href="#">XXXXXXXXXXX</a></li>
@@ -137,20 +151,10 @@
                 </th>
                 <th>
                     <div class="dropdown">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">ID FreshDesk
-                            <span class="caret"></span></button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">150500</a></li>
-                            <li><a href="#">185642</a></li>
-                            <li><a href="#">204458</a></li>
-                            <li><a href="#">189665</a></li>
-                        </ul>
-                    </div>
-                </th>
-                <th>
-                    <div class="dropdown">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">ID Aluno
-                            <span class="caret"></span></button>
+                        ID FreshDesk
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
                         <ul class="dropdown-menu">
                             <li><a href="#">150500</a></li>
                             <li><a href="#">185642</a></li>
@@ -161,8 +165,24 @@
                 </th>
                 <th>
                     <div class="dropdown">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">Data
-                            <span class="caret"></span></button>
+                        ID Aluno&nbsp;
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">150500</a></li>
+                            <li><a href="#">185642</a></li>
+                            <li><a href="#">204458</a></li>
+                            <li><a href="#">189665</a></li>
+                        </ul>
+                    </div>
+                </th>
+                <th>
+                    <div class="dropdown">
+                        Data&nbsp;
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
                         <ul class="dropdown-menu">
                             <li><a href="#">20/05/1985</a></li>
                             <li><a href="#">05/12/2000</a></li>
@@ -173,8 +193,10 @@
                 </th>
                 <th>
                     <div class="dropdown">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">Diagnóstico
-                            <span class="caret"></span></button>
+                        Diagnóstico&nbsp;
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
                         <ul class="dropdown-menu">
                             <li><a href="#">Blá bla bla bla bla bla bla bla lb la bla bla</a></li>
                             <li><a href="#">Blá bla bla bla bla bla bla bla lb la bla bla</a></li>
@@ -185,8 +207,10 @@
                 </th>
                 <th>
                     <div class="dropdown">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">Resposta
-                            <span class="caret"></span></button>
+                        Resposta&nbsp;
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
                         <ul class="dropdown-menu">
                             <li><a href="#">Blá bla bla bla bla bla bla bla lb la bla bla</a></li>
                             <li><a href="#">Blá bla bla bla bla bla bla bla lb la bla bla</a></li>
@@ -197,8 +221,10 @@
                 </th>
                 <th>
                     <div class="dropdown">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">Observações
-                            <span class="caret"></span></button>
+                        Observações&nbsp;
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
                         <ul class="dropdown-menu">
                             <li><a href="#">Blá bla bla bla bla bla bla bla lb la bla bla</a></li>
                             <li><a href="#">Blá bla bla bla bla bla bla bla lb la bla bla</a></li>
@@ -210,7 +236,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="cadastro in cadastros | filter:procurar" >
+            <tr ng-repeat="cadastro in vm.cadastros | filter:procurar" >
                 <td>#</td>
                 <td>{{cadastro.colaborador}}</td>
                 <td>{{cadastro.entrada}}</td>
@@ -226,7 +252,6 @@
                 <td>{{cadastro.resposta}}</td>
                 <td>{{cadastro.observacoes}}</td>
             </tr>
-
         </tbody>
     </table>
 </div>
